--- a/TP_2_Aprendizaje_Automatico.ipynb
+++ b/TP_2_Aprendizaje_Automatico.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6yud4EptTE3sw9v/ks9eJ",
+      "authorship_tag": "ABX9TyPl1opeX4dFQR65bPY5Du8k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "wjfXeaWE_og8"
       },
@@ -206,11 +206,16 @@
         "            bidirectional=False  # unidireccional\n",
         "        )\n",
         "\n",
-        "        # Capa feed-forward para cada etiqueta\n",
-        "        self.capital_ff = nn.Linear(hidden_dim, 2)\n",
-        "        self.coma_ff = nn.Linear(hidden_dim, 2)\n",
-        "        self.punto_ff = nn.Linear(hidden_dim, 2)\n",
-        "        self.pregunta_ff = nn.Linear(hidden_dim, 2)\n",
+        "        # Capa feed-forward para cada problema\n",
+        "        self.punt_inicial_ff = nn.Linear(hidden_dim, 2)\n",
+        "        self.punt_final_ff = nn.Linear(hidden_dim, 4)\n",
+        "        self.capital_ff = nn.Linear(hidden_dim, 4)\n",
+        "\n",
+        "        # Función de activación para cada problema\n",
+        "        self.punt_inicial_sigmoid = nn.Sigmoid()\n",
+        "        self.punt_final_softmax = nn.Softmax(dim=4)\n",
+        "        self.capital_softmax = nn.Softmax(dim=4)\n",
+        "\n",
         "\n",
         "    def forward(self, encoder_outputs, hidden, cell):\n",
         "        \"\"\"\n",
@@ -219,16 +224,14 @@
         "        \"\"\"\n",
         "        outputs, _ = self.lstm(encoder_outputs, (hidden, cell))\n",
         "\n",
-        "        capital_logits = self.capital_ff(outputs)                 #  TODAS ESTAS (LAS # ) HAY QUE VER SI HACERLAS ASÍ SEPARADAS O TODAS JUNTAS\n",
-        "        coma_logits = self.coma_ff(outputs)                       #\n",
-        "        punto_logits = self.punto_ff(outputs)                     #\n",
-        "        pregunta_logits = self.pregunta_ff(outputs)               #\n",
+        "        punt_inicial_logits = self.punt_inicial_sigmoid(self.punt_inicial_ff(outputs))\n",
+        "        punt_final_logits = self.punt_final_sofmax(self.punt_final_ff(outputs))\n",
+        "        capital_logits = self.capital_sofmax(self.capital_ff(outputs))\n",
         "\n",
         "        return {\n",
-        "            \"capital\": capital_logits,\n",
-        "            \"coma\": coma_logits,\n",
-        "            \"punto\": punto_logits,\n",
-        "            \"pregunta\": pregunta_logits\n",
+        "            \"puntuación inicial\": punt_inicial_logits,\n",
+        "            \"puntuación final\": punt_final_logits,\n",
+        "            \"capitalización\": capital_logits,\n",
         "        }\n"
       ],
       "metadata": {
@@ -339,11 +342,16 @@
         "            bidirectional=True  # bidireccional\n",
         "        )\n",
         "\n",
-        "        # Capa feed-forward para cada etiqueta\n",
-        "        self.capital_ff = nn.Linear(hidden_dim, 2)\n",
-        "        self.coma_ff = nn.Linear(hidden_dim, 2)\n",
-        "        self.punto_ff = nn.Linear(hidden_dim, 2)\n",
-        "        self.pregunta_ff = nn.Linear(hidden_dim, 2)\n",
+        "        # Capa feed-forward para cada problema\n",
+        "        self.punt_inicial_ff = nn.Linear(hidden_dim, 2)\n",
+        "        self.punt_final_ff = nn.Linear(hidden_dim, 4)\n",
+        "        self.capital_ff = nn.Linear(hidden_dim, 4)\n",
+        "\n",
+        "        # Función de activación para cada problema\n",
+        "        self.punt_inicial_sigmoid = nn.Sigmoid()\n",
+        "        self.punt_final_softmax = nn.Softmax(dim=4)\n",
+        "        self.capital_softmax = nn.Softmax(dim=4)\n",
+        "\n",
         "\n",
         "    def forward(self, encoder_outputs, hidden, cell):\n",
         "        \"\"\"\n",
@@ -352,16 +360,14 @@
         "        \"\"\"\n",
         "        outputs, _ = self.lstm(encoder_outputs, (hidden, cell))\n",
         "\n",
-        "        capital_logits = self.capital_ff(outputs)                 #  TODAS ESTAS (LAS # ) HAY QUE VER SI HACERLAS ASÍ SEPARADAS O TODAS JUNTAS\n",
-        "        coma_logits = self.coma_ff(outputs)                       #\n",
-        "        punto_logits = self.punto_ff(outputs)                     #\n",
-        "        pregunta_logits = self.pregunta_ff(outputs)               #\n",
+        "        punt_inicial_logits = self.punt_inicial_sigmoid(self.punt_inicial_ff(outputs))\n",
+        "        punt_final_logits = self.punt_final_sofmax(self.punt_final_ff(outputs))\n",
+        "        capital_logits = self.capital_sofmax(self.capital_ff(outputs))\n",
         "\n",
         "        return {\n",
-        "            \"capital\": capital_logits,\n",
-        "            \"coma\": coma_logits,\n",
-        "            \"punto\": punto_logits,\n",
-        "            \"pregunta\": pregunta_logits\n",
+        "            \"puntuación inicial\": punt_inicial_logits,\n",
+        "            \"puntuación final\": punt_final_logits,\n",
+        "            \"capitalización\": capital_logits,\n",
         "        }\n"
       ],
       "metadata": {
