--- a/TP_2_Aprendizaje_Automatico.ipynb
+++ b/TP_2_Aprendizaje_Automatico.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPl1opeX4dFQR65bPY5Du8k",
+      "authorship_tag": "ABX9TyMcR1IkpzQOlcdpSXcEmqQ/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,13 +48,14 @@
         "from torch.utils.data import Dataset, DataLoader\n",
         "from transformers import BertTokenizer, BertModel\n",
         "from typing import List, Dict, Any\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "import pandas as pd"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#DATA SET\n"
+        "#DATA FRAME\n"
       ],
       "metadata": {
         "id": "L_xHy5FQ_5xc"
@@ -62,9 +63,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#leer el dataframe\n",
+        "df = pd.read_csv(\"tu_dataset.csv\")\n",
+        "\n",
+        "# Agrupar tokens por párrafo\n",
+        "df_por_parrafos = df.groupby(\"instancia_id\").agg({\n",
+        "    \"token_id\":list,\n",
+        "    \"token\": list,\n",
+        "    \"punt_inicial\": list,\n",
+        "    \"punt_final\": list,\n",
+        "    \"capitalización\": list\n",
+        "}).reset_index()"
+      ],
       "metadata": {
         "id": "SlHuzgJ1_4PU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8GL2SzTAh_jl"
       },
       "execution_count": null,
       "outputs": []
@@ -132,6 +154,65 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##CREAR CLASE DATASET PARA PYTORCH"
+      ],
+      "metadata": {
+        "id": "A1Zpp0aEjuXH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torch.utils.data import Dataset\n",
+        "\n",
+        "class Dataset(Dataset):\n",
+        "    \"\"\"clase Dataset de pytorch\"\"\"\n",
+        "    def __init__(self, df, tokenizer, bert):\n",
+        "        self.df = df\n",
+        "        self.tokenizer = tokenizer\n",
+        "        self.bert = bert\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return len(self.df)\n",
+        "\n",
+        "    def __getitem__(self, idx):\n",
+        "        row = self.df.iloc[idx]\n",
+        "        tokens = row[\"token\"]\n",
+        "        embeddings_list = []\n",
+        "        for token in tokens:\n",
+        "            token_id = self.tokenizer.convert_tokens_to_ids(token)\n",
+        "            if token_id is None or token_id == self.tokenizer.unk_token_id:\n",
+        "                token_id = self.tokenizer.unk_token_id\n",
+        "            embedding_vector = self.bert.embeddings.word_embeddings.weight[token_id]\n",
+        "            embeddings_list.append(embedding_vector)\n",
+        "        embeddings = torch.stack(embeddings_list)\n",
+        "\n",
+        "        labels = {\n",
+        "            \"punt_inicial\": torch.tensor(row[\"punt_inicial\"]),\n",
+        "            \"punt_final\": torch.tensor(row[\"punt_final\"]),\n",
+        "            \"capitalización\": torch.tensor(row[\"capitalización\"])\n",
+        "        }\n",
+        "\n",
+        "        return embeddings, labels"
+      ],
+      "metadata": {
+        "id": "OBX8JOtxkzcM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## DATA LOADER"
+      ],
+      "metadata": {
+        "id": "B627zo2Af9ml"
+      }
     },
     {
       "cell_type": "markdown",
