--- a/TP2/tp2.ipynb
+++ b/TP2/tp2.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1726,7 +1727,8 @@
           }
         }
       }
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -1752,7 +1754,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1790,7 +1792,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1839,7 +1841,7 @@
       "metadata": {
         "id": "nwupEbruutCx"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1855,7 +1857,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1949,7 +1951,7 @@
           ]
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2099,7 +2101,7 @@
       "metadata": {
         "id": "gYwlSGEGyMqM"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2108,14 +2110,14 @@
         "def normalize_text_y(t):\n",
         "    # Convertir a minúsculas y quitar puntuación\n",
         "    t = re.sub(r'[\\u200b-\\u200f\\uFEFF]', '', t)\n",
-        "    t = re.sub(r\"[^a-zA-Záéíóúüñ0-9¿?,.' -]+\", ' ', t)\n",
+        "    t = re.sub(r\"[^a-zA-Záéíóúüñ0-9¿?,.' -ÁÉÍÓÚÜÑ]+\", ' ', t)\n",
         "    t = re.sub(r'\\s+', ' ', t).strip()\n",
         "    return t"
       ],
       "metadata": {
         "id": "sWI74TYAyWNB"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2170,16 +2172,16 @@
         "\n",
         "        if palabra.islower():\n",
         "          capitalizaciones.append(0)\n",
-        "          ultimo_numero = 0\n",
+        "\n",
         "        elif palabra.istitle():\n",
         "          capitalizaciones.append(1)\n",
-        "          ultimo_numero = 1\n",
+        "\n",
         "        elif palabra.isupper():\n",
         "          capitalizaciones.append(3)\n",
-        "          ultimo_numero = 3\n",
+        "\n",
         "        else:\n",
         "          capitalizaciones.append(2)\n",
-        "          ultimo_numero = 2\n",
+        "\n",
         "\n",
         "  etiquetas = np.column_stack([instancia_ids, token_ids, tokens_l, puntuacion_iniciales, puntuacion_finales, capitalizaciones])\n",
         "  return etiquetas"
@@ -2187,7 +2189,7 @@
       "metadata": {
         "id": "dWVD-ZHu2LUF"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2226,7 +2228,7 @@
         "collapsed": true,
         "id": "8ukgJIVyuEjG"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2280,7 +2282,7 @@
       "metadata": {
         "id": "0OXEsoKR81zP"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2319,7 +2321,7 @@
         "collapsed": true,
         "id": "0zgQ4kTNeFIa"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2343,7 +2345,7 @@
       "metadata": {
         "id": "5BRwbGA7sCsH"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2361,7 +2363,7 @@
       "metadata": {
         "id": "pKAgz6wenZVf"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2558,7 +2560,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
