--- a/TP2/tp2.ipynb
+++ b/TP2/tp2.ipynb
@@ -2277,7 +2277,99 @@
         "\n",
         "    df = pd.DataFrame(bloques, columns=['parrafo'])\n",
         "    df.to_csv('libro_parrafos.csv', index=False, encoding='utf-8-sig')\n",
-        "    return df"
+        "    return df\n",
+        "\n",
+        "#_______________________________________________________________________________________________\n",
+        "# VERSIÓN 2 DE PDF-> CSV\n",
+        "\n",
+        "def convertir_pdf_a_csv2(pdf_path):\n",
+        "    \"\"\"\n",
+        "    Convierte un PDF en CSV pero corta los textos de forma aleatoria:\n",
+        "    - A mitad de una oración\n",
+        "    - Cada 1 oración\n",
+        "    - Cada 2 oraciones\n",
+        "    - Siempre corta al final de una pregunta\n",
+        "    Además filtra párrafos con muchos números.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # -------- Extraer texto --------\n",
+        "    texto_total = \"\"\n",
+        "    with pdfplumber.open(pdf_path) as pdf:\n",
+        "        for pagina in pdf.pages:\n",
+        "            txt = pagina.extract_text()\n",
+        "            if txt:\n",
+        "                texto_total += \" \" + txt\n",
+        "\n",
+        "    texto_total = re.sub(r\"-\\n\", \"\", texto_total)\n",
+        "    texto_total = re.sub(r\"\\s+\", \" \", texto_total).strip()\n",
+        "\n",
+        "    # -------- Dividir en oraciones --------\n",
+        "    oraciones = re.split(r'(?<=[\\.\\?\\!])\\s+', texto_total)\n",
+        "    oraciones = [o.strip() for o in oraciones if len(o.strip()) > 2]\n",
+        "\n",
+        "    bloques = []\n",
+        "    i = 0\n",
+        "    while i < len(oraciones):\n",
+        "\n",
+        "        # si aparece una pregunta → cortar ahí\n",
+        "        if \"¿\" in oraciones[i] or \"?\" in oraciones[i]:\n",
+        "            bloques.append(oraciones[i])\n",
+        "            i += 1\n",
+        "            continue\n",
+        "\n",
+        "        # decisión aleatoria\n",
+        "        modo = np.random.choice([\"mitad\", \"1\", \"2\"], p=[0.2, 0.4, 0.4])\n",
+        "\n",
+        "        if modo == \"mitad\":\n",
+        "            # cortar a la mitad de la oración\n",
+        "            oracion = oraciones[i]\n",
+        "            palabras = oracion.split()\n",
+        "            mitad = max(3, len(palabras) // 2)\n",
+        "            bloque = \" \".join(palabras[:mitad])  # mitad truncada\n",
+        "            bloques.append(bloque)\n",
+        "            i += 1\n",
+        "\n",
+        "        elif modo == \"1\":\n",
+        "            bloques.append(oraciones[i])\n",
+        "            i += 1\n",
+        "\n",
+        "        else:  # modo = \"2\"\n",
+        "            if i + 1 < len(oraciones):\n",
+        "                bloques.append(oraciones[i] + \" \" + oraciones[i+1])\n",
+        "                i += 2\n",
+        "            else:\n",
+        "                bloques.append(oraciones[i])\n",
+        "                i += 1\n",
+        "\n",
+        "    # -------- Filtrar párrafos con demasiados números --------\n",
+        "    def demasiado_numeros(texto):\n",
+        "        nums = sum(c.isdigit() for c in texto)\n",
+        "        return nums / max(len(texto), 1) > 0.15 or bool(re.search(r\"\\b\\d+(\\.\\d+)*\\b\", texto))\n",
+        "\n",
+        "    bloques = [b for b in bloques if not demasiado_numeros(b)]\n",
+        "\n",
+        "    # -------- Balancear preguntas --------\n",
+        "    preg = [b for b in bloques if \"¿\" in b or \"?\" in b]\n",
+        "    nopreg = [b for b in bloques if \"¿\" not in b and \"?\" not in b]\n",
+        "\n",
+        "    # DUPLICAR TODAS LAS PREGUNTAS\n",
+        "    preg_duplicadas = preg + preg  # ahora cada pregunta aparece dos veces\n",
+        "\n",
+        "    # eliminar 75% de nopreg\n",
+        "    cant = int(len(nopreg) * 0.25)\n",
+        "    nopreg_reducidas = list(np.random.choice(nopreg, cant, replace=False)) if cant > 0 else []\n",
+        "\n",
+        "    # combinar todo\n",
+        "    bloques_final = preg_duplicadas + nopreg_reducidas\n",
+        "\n",
+        "    # mezclar aleatoriamente\n",
+        "    np.random.shuffle(bloques_final)\n",
+        "\n",
+        "    df = pd.DataFrame(bloques_final, columns=['parrafo'])\n",
+        "    df.to_csv('libro_parrafos.csv', index=False, encoding='utf-8-sig')\n",
+        "\n",
+        "    return df\n",
+        "\n"
       ],
       "metadata": {
         "id": "0OXEsoKR81zP"
